# PhishWatch

./: .editorconfig  README.md  st_app.py
api/: main.py  pyproject.toml
api/core/: __init__.py  checks.py  db.py  utils.py
api/models/: Response.py
